* NEW largely extended pcl5 terminal supports PCL5e/PCL5c printers
* NEW revised pstricks and texdraw LaTeX terminals
* NEW extended dospc terminal (DOS32/OpenWatcom)
* NEW extended svga terminal using the (M)GRX library (DOS32/DJGPP)
* NEW heavily revised fig terminal
* NEW Left-click on hypertext label will copy text to clipboard (wxt qt)
* EXPERIMENTAL internal support for appending to existing arrays
* EXPERIMENTAL "set mouse mouseformat function <stringval_from_xy(x,y)>"
* EXPERIMENTAL multiple textbox styles
* EXPERIMENTAL load $DATABLOCK
* EXPERIMENTAL "exit status <val>" exits program with user-provided status
* CHANGE revised syntax for plot style "with parallelaxes"
* CHANGE remove deprecated command "update"
* CHANGE remove deprecated option "thru"
* CHANGE special case optimization of nonlinear code to speed up logscale
* CHANGE windows terminal can print using Direct2D
* CHANGE windows terminal supports color fonts (Direct2D)
* CHANGE arrow head size can be decoupled from arrow size
* CHANGE apply trange to sampling on pseudofile '+'
* CHANGE move tgif terminal to "legacy" status; build only if configured
* CHANGE imaginary values from the using spec of a 2D plot are treated as NaN
* CHANGE remove compile option EXTENDED_COLOR_SPECS used only by vgagl.trm
* CHANGE remove linux and vgagl terminals
* CHANGE remove undocumented EXPERIMENTAL option for pm3d filled contours
* CHANGE print to datablock expands embedded \n into a separate block entry
* FIX allow mixed use of in-key plot titles and manually placed titles
* FIX open/close path for polygons
* FIX several stability issues of the caca terminal

New features introduced to 5.2 in patchlevel releases
=====================================================
* NEW "set grid {no}vertical" adds grid lines in the xz and xz planes
* NEW "set cntrparam {firstlinetype N} {{un}sorted}"
* NEW set table separator {tab|comma|"char"} allows creation of csv files