@@ -134,7 +134,8 @@ typedef enum PLOT_SMOOTH {
     SMOOTH_CUMULATIVE_NORMALISED,
     SMOOTH_MONOTONE_CSPLINE,
     SMOOTH_BINS,
-    SMOOTH_FREQUENCY_NORMALISED
+    SMOOTH_FREQUENCY_NORMALISED,
+    SMOOTH_ZSORT
 } PLOT_SMOOTH;
 
 struct cmplx {
