@@ -25,6 +25,7 @@ Changes not in 5.2
 * NEW extended svga terminal using the (M)GRX library (DOS32/DJGPP)
 * NEW heavily revised fig terminal
 * NEW Left-click on hypertext label will copy text to clipboard (wxt qt)
+* NEW smooth option "zsort" controls order that points are plotting in
 * EXPERIMENTAL internal support for appending to existing arrays
 * EXPERIMENTAL "set mouse mouseformat function <stringval_from_xy(x,y)>"
 * EXPERIMENTAL multiple textbox styles
